Mobile layout adjustment

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <p class="notification-text">
               <a class="user-name" href="#">Mark Webber</a> reacted to your recent post 
               <a class="notification-info post" href="#">My first tournament today!</a>
+              <div class="dot-notred"></div>
             </p>
-            <div class="dot-notred"></div>
           </div>
           <!-- notification time -->
           <div class="notification-time">
@@ -85,8 +85,9 @@
           <!-- username and notification -->
           <div class="notification">
             <p class="notification-text">
-              <a class="user-name">Jacob Thompson</a> has joined your Group</p>
-            <a class="notification-info group">Chess Club</a>
+              <a class="user-name">Jacob Thompson</a> has joined your Group
+              <a class="notification-info group">Chess Club</a>
+            </p>
             <div class="dot-notred"></div>
           </div>
           <!-- notification time -->
@@ -106,8 +107,9 @@
           <!-- username and notification -->
           <div class="notification">
             <p class="notification-text">
-              <a class="user-name">Rizky Hasanuddin</a> sent you a private message</p>
-            <a class="notification-info"></a>
+              <a class="user-name">Rizky Hasanuddin</a> sent you a private message
+              <a class="notification-info"></a>
+            </p>
             <div class="dot-notred"></div>
           </div>
           <!-- notification time -->
@@ -116,8 +118,11 @@
           </div>
         </div>
         <!-- private message preview -->
-        <textarea name="private-message" id="private-message" cols="auto" rows="3" wrap="hard" disabled>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.
-        </textarea>
+        <p id="private-message">
+          <a href="#">
+          Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.
+          </a>
+        </p>
       </div>
 
       <div class="notification-box has-picture-prev">
@@ -130,8 +135,9 @@
           <!-- username and notification -->
           <div class="notification">
             <p class="notification-text">
-              <a class="user-name">Kimberly Smith</a> commented on your picture</p>
-            <a class="notification-info"></a>
+              <a class="user-name">Kimberly Smith</a> commented on your picture
+              <a class="notification-info"></a>
+            </p>
             <div class="dot-notred"></div>
           </div>
           <!-- notification time -->
@@ -156,8 +162,9 @@
           <!-- username and notification -->
           <div class="notification">
             <p class="notification-text">
-              <a class="user-name">Nathan Peterson</a> reacted to your recent post </p>
-            <a class="notification-info post">5 end-game strategies to increase your win rate</a>
+              <a class="user-name">Nathan Peterson</a> reacted to your recent post 
+              <a class="notification-info post">5 end-game strategies to increase your win rate</a>
+            </p>
             <div class="dot-notred"></div>
           </div>
           <!-- notification time -->
@@ -177,8 +184,9 @@
           <!-- username and notification -->
           <div class="notification">
             <p class="notification-text">
-              <a class="user-name">Anna Kim</a> left the group </p>
-            <a class="notification-info group">Chess Club</a>
+              <a class="user-name">Anna Kim</a> left the group 
+              <a class="notification-info group">Chess Club</a>
+            </p>
             <div class="dot-notred"></div>
           </div>
           <!-- notification time -->
