--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Notifications <span id="notification-number">3</span>
         </h1>
         <!-- mark button -->
-        <button id="mark-btn" type="button" aria-label="Mark as read">
+        <button id="mark-btn" type="button" aria-label="Mark as read" onclick="allRead()">
           Mark all as read
         </button>
       </div>
@@ -206,6 +206,6 @@
     </div>
   </footer>
   
-  <script src="./js/main.js/"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
